kca/manifests/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  labels:
    team: backend
spec:
  containers:
  - name: nginx
    image: nginx
