kca/manifests/pod-security.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-pod-security
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-securityContext
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "securityContext가 필요합니다!"
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
            runAsUser: ">1000"
          containers:
          - securityContext:
              allowPrivilegeEscalation: false
              capabilities:
                drop:
                - ALL
